Fixed some CSS spacing/alignment issues

--- a/public/bootstrap/less/trp2.less
+++ b/public/bootstrap/less/trp2.less
@@ -483,8 +483,8 @@ h1 {
 
 .trpNavItemContainer {
   padding-left: 32px;
-  padding-top: 17px;
-  padding-bottom: 17px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   border-bottom:thin solid #e2e2e2;
 }
 
@@ -527,8 +527,8 @@ h1 {
 /*Common View elements*/
 
 .trpSectionViewHeader {
-  padding-bottom: 20px;
-  padding-top: 20px;
+  padding-bottom: 16px;
+  padding-top: 15px;
   padding-right: 20px;
 }
 
